process-sample-search